--- a/ResourceBasedAuthorization/ResourceBasedAuthorization.Api/appsettings.json
+++ b/ResourceBasedAuthorization/ResourceBasedAuthorization.Api/appsettings.json
@@ -8,6 +8,6 @@
     }
   },
   "ApplicationInsights": {
-    "InstrumentationKey": "760d7393-6cb2-42eb-99b9-505349c755f7"
+    "InstrumentationKey": ""
   }
 }
